--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Peter Kim",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "morgan": "^1.7.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
