--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Online journal to record dreams",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "mocha"
   },
   "author": "Peter Kim",
@@ -11,12 +12,14 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "mongoose": "^4.7.3",
     "morgan": "^1.7.0",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
+    "faker": "^3.1.0",
     "mocha": "^3.2.0"
   },
   "repository": {
