--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "mongoose": "^4.7.3",
+    "mongoose-schema-formatdate": "^1.0.0",
     "morgan": "^1.7.0",
     "uuid": "^3.0.1"
   },
