--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "Peter Kim",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "mongoose": "^4.7.3",
     "mongoose-schema-formatdate": "^1.0.0",
     "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-http": "^0.3.0",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
