--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.0",
     "body-parser": "^1.15.2",
+    "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
