--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "Lucid Dream Journal",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server/server.js"
   },
   "repository": "git@github.com:peter-minho-kim/dream-walker.git",
   "author": "Peter Kim",
   "license": "MIT",
   "dependencies": {
-    "express": "4.14.0"
+    "body-parser": "1.15.2",
+    "express": "4.14.0",
+    "mongodb": "2.2.5",
+    "mongoose": "4.5.9"
   }
 }
